<resources>
	<string name="app_name">MPDroid</string>
	<string name="artists">Artists</string>
	<string name="genres">Genres</string>
	<string name="playlists">Playlists</string>
	<string name="files">Files</string>
	<string name="albums">Albums</string>
	<string name="settings">Settings</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	<string name="ok">OK</string>
	<string name="quit">Quit</string>
	<string name="retry">Retry</string>
	<string name="loading">Loading…</string>
	<string name="loadingGenres">Loading genres…</string>
	<string name="loadingAlbums">Loading albums…</string>
	<string name="loadingArtists">Loading artists…</string>
	<string name="loadingSongs">Loading songs…</string>
	<string name="loadingPlaylists">Loading playlists…</string>
	<string name="playlist">Playlist</string>
	<string name="addAndReplace">Add and replace</string>
	<string name="addAndReplacePlay">Add, replace and play</string>
	<string name="addAlbum">Add album</string>
	<string name="addPlaylist">Add playlist</string>
	<string name="addAndPlay">Add and play</string>
	<string name="addArtist">Add artist</string>
	<string name="addGenre">Add genre</string>
	<string name="addDirectory">Add</string>
	<string name="addSong">Add song</string>
	<string name="removeSongs">Remove songs</string>
    <string name="cropSongs">Crop</string>
    <string name="removeCountSongs">Removed %s songs</string>
	<string name="clear">Clear</string>
	<string name="mainMenu">Main Menu</string>
	<string name="playlistCleared">Playlist cleared</string>
	<string name="deletedSongFromPlaylist">Deleted song from playlist</string>
	<string name="albumAdded">Album %s added</string>
	<string name="playlistAdded">Playlist %s added</string>
	<string name="addedDirectoryToPlaylist">Added %s to playlist</string>
	<string name="artistAdded">Artist %s added</string>
	<string name="host">Host</string>
	<string name="hostDescription">MPD-Server Hostname or IP-Address</string>
	<string name="hostStreaming">Streaming host</string>
	<string name="hostStreamingDescription">Streaming server Hostname or IP-Address</string>
	<string name="port">Port</string>
	<string name="portDescription">MPD-Server port (Default: 6600)</string>
	<string name="password">Password</string>
	<string name="passwordDescription">Password for the Server</string>
	<string name="albumTrackSort">Album Sort Track</string>
	<string name="albumTrackSortDescription">Sort Album by track number</string>
	<string name="version">Version</string>
	<string name="songs">Songs</string>
	<string name="serverInformation">Server Information</string>
	<string name="serverInformationDescription">Different MPD-Server information such as version, songcount…</string>
	<string name="connectionSettings">Connection settings</string>
	<string name="connectionSettingsDescription">Set MPD-Host/Port and password</string>
	<string name="outputs">Outputs</string>
	<string name="interfaceSettings">Interface settings</string>
	<string name="librarySettings">Library settings</string>
	<string name="songAdded">Song %s added</string>
	<string name="about">About</string>
	<string name="connectionFailed">Connection Failed</string>
	<string name="connectionFailedMessage">Connection to MPD-Server failed! Check if the Server is running and reachable. (%s)</string>
	<string name="connect">Connect</string>
	<string name="connecting">Connecting…</string>
	<string name="connectingToServer">Connecting to MPD-Server.</string>
	<string name="connected">Connected</string>
	<string name="notConnected">Not connected</string>
	<string name="noSongInfo">No song info</string>
	<string name="notInRange">Not in range, remembered</string>
	<string name="playlistDeleted">Playlist %s deleted</string>
	<string name="deletePlaylist">Delete playlist</string>
	<string name="defaultConnection">Default connection</string>
	<string name="preferredConnection">Preferred connection</string>
	<string name="chooseWLAN">Choose a WLAN network</string>
	<string name="wlanBasedSettings">WLAN based connection</string>
	<string name="defaultSettings">Default connection settings</string>
	<string name="wlanBasedSettingsDescription">Set WLAN based MPD-Host/Port and password</string>
	<string name="defaultSettingsDescription">Set default MPD-Host/Port and password</string>
	<string name="extrasConnection">Global connection settings</string>
	<string name="mopidyConnection">Modipy server</string>
	<string name="mopidyConnectionOnDescription">My server is a Modipy server</string>
	<string name="mopidyConnectionOffDescription">My server is a standard MPD</string>
	<string name="stream">Streaming</string>
	<string name="buffering">Buffering …</string>
	<string name="portStreaming">Streaming port</string>
	<string name="portStreamingDescription">MPD Streaming port (Default: 8000)</string>
	<string name="suffixStreaming">Streaming URL suffix</string>
	<string name="suffixStreamingDescription">Suffix to append to stream URL (ex. mpd.mp3)</string>
	<string name="streamStopped">Streaming stopped</string>
	<string name="aboutText1">MPDroid is open-source software. Visit http://github.com/abarisain/dmix for source code !</string>
	<string name="aboutText2">MPDroid is a fork of PMix (http://code.google.com/p/pmix/). Thanks to them !</string>
	<string name="search">Search</string>
	<string name="search_label">MPDroid</string>
	<string name="search_hint">Search …</string>
	<string name="libraryTabActivity">Library</string>
	<string name="warningTitle">Please read</string>
	<string name="warningText1">Welcome to MPDroid 1.0 !\nThis will only display once.\n\nFirst of all, if you don\'t know what a MPD server is, you should uninstall the application now, it is not made for you.\n\nImportant known bug : Widget sometimes crashes or drains battery.\n\nFor previous users, thanks a lot for your support and contributions.</string>
	<string name="editPlaylist">Edit</string>
	<string name="nowPlaying">Now Playing</string>
	<string name="cancel">Cancel</string>
	<string name="playNext">Play next</string>
    <string name="go_to">Go to …</string>
    <string name="moveFirst">Move to first</string>
	<string name="moveLast">Move to last</string>
	<string name="removeFromPlaylist">Remove from queue</string>
	<string name="removeAlbumFromPlaylist">Remove album from queue</string>
	<string name="save">Save</string>
	<string name="updateDBDetails">Refresh MPD\'s database</string>
	<string name="useLocalAlbumCache">Use Album Cache</string>
	<string name="useLocalAlbumCacheDescription">Save MPD Database Info Locally</string>
	<string name="sortAlbumsByYear">Album year</string>
	<string name="sortAlbumsByYearDescription">Sort albums by year</string>
	<string name="showAlbumTrackCount">Album track count</string>
	<string name="showAlbumTrackCountDescription">Show number of tracks on album</string>
	<string name="enableLocalCover">Download local cover art</string>
	<string name="enableLocalCoverDescription">Get cover art from the server running MPD (requires a web server, read the wiki!)</string>
	<string name="musicPath">Path to music</string>
	<string name="musicPathDescriptionNew">Path to your music directory on the MPD server IE, files/mp3 (music/ for vortexbox users). For complex setups, absolute paths (IE "http://ip:port/music") are accepted.</string>
	<string name="coverFileName">Cover filename</string>
	<string name="coverFileNameDescription">Standard filename for your album artwork IE, folder.jpg (cover.jpg for vortexbox users)</string>
	<string name="cacheUsage">Cache usage</string>
	<string name="deleteServer">Delete this server</string>
	<string name="aboutIcon">Original app icon by Asher (http://kyo-tux.deviantart.com/) and brsev (http://brsev.deviantart.com/), modified for MPDroid.</string>
	<string name="connectionFailedMessageSetting">Connection failed, check your connection settings. (%s)</string>
	<string name="no_result">No results</string>
	<string name="backpressToQuit">Press back again to quit</string>
	<string name="playQueue">Play Queue</string>
	<string name="deletePlaylistPrompt">Are you sure you wish to delete %s?</string>
	<string name="failedToDelete">Failed to delete %s</string>
	<string name="variousArtists">Various artists</string>
	<string name="tracksInfoHeader">%1$s Tracks, %2$s</string>
	<string name="tracksInfoHeaderPlural">%1$s Tracks, %2$s</string>
	<string name="audioFocusFailed">Cannot start streaming : Another application is playing music.</string>
	<string name="addToPlaylist">Add to playlist</string>
	<string name="newPlaylist">(New playlist)</string>
	<string name="playlistName">Playlist Name</string>
	<string name="newPlaylistPrompt">Enter name for new playlist:</string>
	<string name="streams">Streams</string>
	<string name="addStream">Add Stream</string>
	<string name="editStream">Edit stream</string>
	<string name="streamAdded">Stream %s added</string>
	<string name="loadingStreams">Loading streams…</string>
	<string name="streamDeleted">Stream %s deleted</string>
	<string name="deleteStream">Delete stream</string>
	<string name="deleteStreamPrompt">Are you sure you wish to delete %s?</string>
	<string name="streamName">Name:</string>
	<string name="streamUrl">URL:</string>
	<string name="genreAdded">Genre %s added</string>
	<string name="enableStopButton">Show stop button</string>
	<string name="singleMode">Single mode</string>
	<string name="consumeMode">Consume mode</string>
	<string name="albumCover">Album cover</string>
	<string name="divider">Divider button</string>
	<string name="startApp">Start MPDroid</string>
	<string name="menuButton">Menu button</string>
	<string name="listItemHandle">List item handle</string>
	<string name="play">Play</string>
	<string name="stop">Stop</string>
    <string name="enableAlbumYearText">Show album year</string>
    <string name="showAlbumArtist">Show album artist</string>
    <string name="enableAudioText">Show audio properties</string>
    <string name="startStreaming">Start Streaming</string>
    <string name="stopStreaming">Stop Streaming</string>
    <string name="behavior">Phone Behavior</string>
	<string name="pauseOnPhoneStateChange">Pause playback</string>
	<string name="pauseOnPhoneStateChangeDescription">Pause playback when in a call</string>
	<string name="playOnPhoneStateChange">Resume playback</string>
	<string name="playOnPhoneStateChangeDescription">Resume playback when a call ends</string>
	<string name="libraryTabsSettings">Library tabs settings</string>
	<string name="libraryTabsSettingsDescription">Select which tabs are visible and how they are ordered</string>
	<string name="visibleTabs">Visible Tabs</string>
	<string name="hiddenTabs">Hidden Tabs</string>
	<string name="coverArtTitle">Cover art settings</string>
	<string name="coverArtDescription">Change how cover art is downloaded and stored</string>
	<string name="enableLocalCoverCache">Cache cover art</string>
	<string name="enableLocalCoverCacheDescription">Saves downloaded cover art on the device for faster retrieval</string>
	<string name="clearLocalCoverCache">Clear cover art cache</string>
	<string name="clearLocalCoverCacheDescription">Free the storage space used by the cover art cache</string>
    <string name="clearLocalCoverCachePrompt">Delete all cached cover art ?</string>
	<string name="updatingLocalAlbumCacheNote">Updating local album cache</string>
	<string name="enableAlbumArtLibrary">Album cover art listing in library</string>
	<string name="enableAlbumArtLibraryDescription">Use large cover art tiles for the albums listing in the library. This feature is experimental! You may experience lag and/or crashes. (Requires cache cover art)</string>
    <string name="goToAlbum">Go to album</string>
    <string name="goToArtist">Go to artist</string>
    <string name="goToAlbumArtist">Go to album artist</string>
    <string name="goToFolder">Go to folder</string>
    <string name="goToStream">Go to streams</string>
</resources>