<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/GMM_LibTab"
        android:icon="@drawable/ic_menu_library"
        android:showAsAction="ifRoom"
        android:title="@string/libraryTabActivity" android:orderInCategory="2">
    </item>
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="ifRoom"
        android:title="@string/search" android:orderInCategory="3">
	</item>
    <item
        android:id="@+id/GMM_Stream"
        android:icon="@android:drawable/ic_menu_upload_you_tube"
        android:title="@string/stream" android:orderInCategory="3">
    </item>
    <item
        android:id="@+id/GMM_Settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings">
    </item>
    <item
        android:id="@+id/GMM_bonjour"
        android:title="Bonjour"
        android:visible="false">
    </item>

</menu>