<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/notificationIcon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginRight="8dp"
        android:background="#3333B5E5"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_bw" />

    <TextView
        android:id="@+id/notificationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_toLeftOf="@+id/notificationClose"
        android:layout_toRightOf="@+id/notificationIcon"
        android:ellipsize="marquee"
        android:maxLines="1"
        android:singleLine="true"
        android:text="Title"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/notificationArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notificationTitle"
        android:layout_toLeftOf="@+id/notificationClose"
        android:layout_toRightOf="@+id/notificationIcon"
        android:ellipsize="marquee"
        android:maxLines="1"
        android:singleLine="true"
        android:text="Artist"
        android:textAppearance="?android:textAppearanceSmall" />

    <TextView
        android:id="@+id/notificationAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notificationArtist"
        android:layout_toLeftOf="@+id/notificationClose"
        android:layout_toRightOf="@+id/notificationIcon"
        android:ellipsize="marquee"
        android:maxLines="1"
        android:singleLine="true"
        android:text="Album"
        android:textAppearance="?android:textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notificationIcon"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/notificationPrev"
            style="@style/PlayerSmallButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_media_previous" />

        <ImageView
            android:id="@+id/notificationPlayPause"
            style="@style/PlayerSmallButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/nowPlaying"
            android:src="@drawable/ic_media_pause" />

        <ImageView
            android:id="@+id/notificationNext"
            style="@style/PlayerSmallButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/playNext"
            android:src="@drawable/ic_media_next" />
    </LinearLayout>

    <ImageView
        android:id="@+id/notificationClose"
        style="@style/PlayerSmallButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/stop"
        android:src="@drawable/ic_close_notification" />

</RelativeLayout>