<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp" >

    <ImageView
        android:id="@+id/notificationIcon"
        android:layout_width="@android:dimen/notification_large_icon_width"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:layout_marginRight="8dp"
        android:background="#3333B5E5"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_bw" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/notificationPlayPause"
        android:layout_toRightOf="@+id/notificationIcon"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/notificationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Title"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/notificationArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Artist"
            android:textAppearance="?android:textAppearanceSmall" />
    </LinearLayout>

    <ImageView
        android:id="@+id/notificationPlayPause"
        style="@style/PlayerSmallButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_toLeftOf="@+id/notificationNext"
        android:contentDescription="@string/nowPlaying"
        android:src="@drawable/ic_media_pause" />

    <ImageView
        android:id="@+id/notificationNext"
        style="@style/PlayerSmallButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_toLeftOf="@+id/notificationClose"
        android:contentDescription="@string/playNext"
        android:src="@drawable/ic_media_next" />

    <ImageView
        android:id="@+id/notificationClose"
        style="@style/PlayerSmallButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/stop"
        android:src="@drawable/ic_close_notification" />

</RelativeLayout>