<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="55dip"
    android:layout_gravity="left"
    android:background="?android:attr/activatedBackgroundIndicator"
    android:baselineAligned="true"
    android:descendantFocusability="blocksDescendants"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:paddingBottom="4dip"
    android:paddingTop="4dip" >

    <ImageView
        android:id="@+id/icon"
        android:contentDescription="@string/listItemHandle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:paddingLeft="4dip"
        android:scaleType="center"
        android:src="?attr/listItemHandle" android:layout_alignParentLeft="true" android:layout_marginLeft="0dp"
        android:layout_alignParentTop="false" android:layout_marginTop="4dp" android:layout_alignParentStart="false"
        android:layout_centerVertical="true"/>

    <ImageView
        android:id="@+id/cover"
        android:contentDescription="@string/albumCover"
        android:layout_width="46dip"
        android:layout_height="46dip"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="4dip"
        android:src="?attr/noCoverArtIcon" android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
        android:layout_marginTop="4dp" android:layout_toRightOf="@+id/icon"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_toRightOf="@+id/cover" android:layout_toLeftOf="@+id/menu">

        <TextView
            android:id="@android:id/text1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:id="@android:id/text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/picture"
                android:layout_width="32dp"
                android:layout_height="fill_parent"
                android:layout_gravity="left"
                android:gravity="center"
                android:padding="4dp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Height and padding are hardcoded because of this stupid TouchInterceptor -->

    <ImageButton
        android:id="@+id/menu"
        android:contentDescription="@string/menuButton"
        android:layout_width="40dip"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@null"
        android:paddingLeft="2dip"
        android:paddingRight="4dip"
        android:src="@drawable/ic_menu_moreoverflow_card" android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true" android:layout_alignParentStart="false"
        android:layout_centerVertical="true"/>

</RelativeLayout>